Fix build script for Heroku deployment
- Remove postinstall db:generate to avoid build issues
- Move db:generate to build script with npx prefix
- Use npx for all drizzle-kit commands for better reliability

--- a/package.json
+++ b/package.json
@@ -8,14 +8,13 @@
   },
   "scripts": {
     "dev": "next dev --turbo",
-    "build": "tsx lib/db/migrate.ts && next build",
+    "build": "npx drizzle-kit generate && tsx lib/db/migrate.ts && next build",
     "start": "next start",
-    "postinstall": "npm run db:generate",
     "heroku-prebuild": "npm install --legacy-peer-deps",
     "lint": "next lint && biome lint --write --unsafe",
     "lint:fix": "next lint --fix && biome lint --write --unsafe",
     "format": "biome format --write",
-    "db:generate": "drizzle-kit generate",
+    "db:generate": "npx drizzle-kit generate",
     "db:migrate": "npx tsx lib/db/migrate.ts",
     "db:studio": "drizzle-kit studio",
     "db:push": "drizzle-kit push",
